# cmlibs.exporter

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  run_tests.yaml
docs/: conf.py  index.rst
src/cmlibs/exporter/: __init__.py  base.py  baseimage.py  flatmapsvg.py  mbfxml.py  vtk.py  webgl.py
src/opencmiss/exporter/: baseimage.py  image.py  thumbnail.py  webgl.py
tests/: test_exporter.py  test_flatmapsvg.py  test_vtk.py  test_webgl.py
tests/resources/: argon-document.json  basic_sphere.exf  fitted_uterus.exf  flattened_vagus.exf  properties.json  simple-vessel-structure.neon  simple_vessel_structure.exf  two-cubes-lines.neon  user-projected-annotations.json  user-projected-mesh.exf
tests/resources/embedded_model/: DataEmbedder.exf  OrganScaffold.exf  neon-document.json
